--- a/style.css
+++ b/style.css
@@ -71,22 +71,26 @@ h1 {
   background-color: var(--box-color);
   padding: 25px;
   border-radius: 20px;
-  width: 400px;
+  min-width: 400px;
+  min-height: 200px;
+  max-height: 90vh;
+  position: relative;
 }
 
-.list-container {
-  padding: 0 25px;
+.list {
+  padding-bottom: 45px;
 }
-.list div{
-  margin-top: 10px;
-  color: var(--text-color);
+.list div {
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: start;
+  padding-top: 10px;
 }
-.list div span {
+.todo-text{
+  color: var(--text-color);
   max-width: 200px;
 }
+
 
 .btn {
   padding: 10px 15px;
@@ -105,6 +109,14 @@ h1 {
 .btns-container button{
   flex: 1 1;
 }
+.btns-container {
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  right: 0;
+  margin-right: 25px;
+  margin-left: 25px;
+}
 
 .delete-btn {
   padding: 6px 8px;
@@ -112,4 +124,33 @@ h1 {
   font-weight: 700;
   background-color: var(--delete-btn-color);
   color: white;
+}
+
+
+@media(max-width:768px){
+  .wrapper {
+    width: 100%;
+    height: 80%;
+    margin: 20px;
+  }
+  .theme-button img {
+    width: 17px;
+    height: 17px;
+  }
+  .theme-button {
+    right: 20px;
+  }
+}
+@media(max-width:500px){
+  .theme-button img {
+    width: 15px;
+    height: 15px;
+  }
+  .wrapper {
+    min-width: 300px;
+    margin: 10px;
+  }
+  .theme-button {
+    right: 10px;
+  }
 }
